# programmiersprachen-aufgabe-1

./: LICENSE  README.org  glossary.org
.github/workflows/: ci.yml
source/: CMakeLists.txt  checksum.cpp  cylinder.cpp  factorial.cpp  fract.cpp  is_prime.cpp  mile_to_kilometer.cpp  smallest.cpp  sum_multiples.cpp  tests.cpp
